--- a/Admin/templates/Category.html
+++ b/Admin/templates/Category.html
@@ -14,64 +14,39 @@
                 <div class="button-panel">
                     <a class="btn btn-fab btn-raised btn-primary" href="#" title="Create news Post"><i class="fa fa-plus"></i></a>
                 </div>
-                <div id="post-grid" data-pjax-container="">
-                    <div class="panel panel-default data-grid">
-                        <div id="data-grid" class="table-responsive">
-                            <div class="col col-md-8">
+
+                <div class="row">
+                    <div class="col col-md-6">
+
+                        <div class="panel panel-default">
+
+                            <div class="panel-heading">
+                                <div class="pull-left">Categories</div>
+                                <div class="pull-right">Button</div>
+                            </div>
+                            <div class="panel-body">
+                                  
                                 {% for genre,structure in news|tree_info %}
-                                    {% if structure.new_level %}<ul><li>{% else %}</li><li>{% endif %}
-                                        {{ genre.name }}
+                                    {% if structure.new_level %}<ul><li class="list-unstyled">{% else %}</li><li class="list-unstyled" >{% endif %}
+                                        <div class="input-group input-group-lg" style="margin-left:-40px; margin-top: 5px;">
+                                            <span class="input-group-addon"><i class="fa fa-bars" aria-hidden="true"></i></span>	
+                                            <input type="text" class="form-control" placeholder="{{ genre.name }}">
+                                        </div>
                                     {% for level in structure.closed_levels %}</li></ul>{% endfor %}
                                 {% endfor %}
-                                <div style="background-color: red;">sa</div>
                                 
                             </div>
-                            <div class="col col-md-4">
-                                <!-- createcategory.html -->
-                                {% include 'inc/createcategory.html' %}
-                            </div>
+                            <div class="panel-footer">Panel Footer</div>
+
+                        </div>
                         
-                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    <script>
-        function changeAttribute(id, att) {
-            var data = {};
-            data.id = id;
-            data.attribute = att;
-            $.get('/post/change', data)
-        }
-    </script>
-{% endblock %}
-
-{% comment %}
-{% block content %}
-        <div class="main-panel">
-            {% include 'inc/header.html' %}
-
-            <div class="main-content">
-                <ul class="breadcrumb ">
-                    <li><a href="/">Bosh sahifa</a></li>
-                    <li class="active">Manage Posts</li>
-                </ul>
-                <div id="post-grid" data-pjax-container="">
-                    <div class="col col-md-8">
-                        <div id="data-grid" class="scroll">
-                            {% for genre,structure in news|tree_info %}
-                                {% if structure.new_level %}<ul><li>{% else %}</li><li>{% endif %}
-                                    {{ genre.name }}
-                                {% for level in structure.closed_levels %}</li></ul>{% endfor %}
-                            {% endfor %}
-                            <div style="background-color: red;">sa</div>
-                        </div>
-                    </div>
-                    <div class="col col-md-4">
+                    <div class="col col-md-6">
                         <!-- createcategory.html -->
                         {% include 'inc/createcategory.html' %}
                     </div>
                 </div>
+                         
             </div>
         </div>
     <script>
@@ -83,4 +58,3 @@
         }
     </script>
 {% endblock %}
-{% endcomment %}
