--- a/Admin/templates/Category.html
+++ b/Admin/templates/Category.html
@@ -21,8 +21,10 @@
                         <div class="panel panel-default">
 
                             <div class="panel-heading">
-                                <div class="pull-left">Categories</div>
-                                <div class="pull-right">Button</div>
+                                <div class="pull-left" style="font-size: 18px;">Categories</div>
+                                <div class="pull-right">
+                                    <button type="button" class="btn btn-sm btn-primary">+Root</button>
+                                </div>
                             </div>
                             <div class="panel-body">
                                   
