--- a/Admin/templates/inc/createcategory.html
+++ b/Admin/templates/inc/createcategory.html
@@ -1,17 +1,43 @@
 {% load widget_tweaks %}
-<div>
-    <h3>Create Category</h3>
+<div class="panel panel-default">
+
+    <div class="panel-heading">
+        <div class="pull-left" style="font-size: 18px;">Create Category</div>
+    </div>
+    <div class="panel-body">
+        <form action="" method="POST">
+            {% csrf_token %}
+            <fieldset>
+              <div class="form-group">
+                {% render_field form.name type="text" id="disabledTextInput" class="form-control" placeholder="Name" %}
+              </div>
+              <div class="form-group">
+                {% render_field form.slug type="text" id="disabledTextInput" class="form-control" placeholder="Slug" %}
+              </div>
+              <div class="form-group">
+                {% render_field form.description type="text" id="disabledTextInput" class="form-control" placeholder="Description" %}
+              </div>
+              <div class="form-check">
+                {% render_field form.is_home class="form-check-input" type="checkbox" %}
+                <label class="form-check-label">
+                    Is home
+                </label>
+              </div>
+              <div class="form-check">
+                {% render_field form.is_hidden class="form-check-input" type="checkbox" %}
+                <label class="form-check-label">
+                    Is hidden
+                </label>
+              </div>
+              <hr>
+            <button name="btn"  type="submit" style="width: 100%;" class="btn btn-primary"> Submit</button>
+            </fieldset>
+          </form>
+        
+    </div>
+    
+
 </div>
-<form action="" method="POST">
-    {% csrf_token %}
-    {% render_field form.name style="width:100%;padding:5px;margin:10px 0;" value='' title="name" placeholder="Name" %}
-    {% render_field form.slug  style="width:100%;padding:5px;margin:10px 0;" value='' title="slug" placeholder="Slug" %}
-    {% render_field form.description style="width:100%;max-height:100px;margin:10px 0;" value='' title="description" %}
-    <label for="is_home">Is home :</label>
-    {% render_field form.is_home name="is_home" title="Hello, world!" %}
-    <br>
-    <label for="is_hidden">Is hidden</label>
-    {% render_field form.is_hidden name="is_hidden" title="Hello, world!" %}
-    <hr>
-    <button name="btn"  type="submit" style="width: 100%;" class="btn btn-primary"> Submit</button>
-</form>
+
+
+
