--- a/Admin/templates/index.html
+++ b/Admin/templates/index.html
@@ -9,7 +9,7 @@
                     <li class="active">Post</li>
                 </ul>
                 <div class="button-panel">
-                    <a class="btn btn-fab btn-raised btn-primary" href="#" title="Create news Post"><i class="fa fa-plus"></i></a>
+                    <a class="btn btn-fab btn-raised btn-primary" href="{% url 'createpost' %}" title="Create news Post"><i class="fa fa-plus"></i></a>
                 </div>
                 <div id="post-grid" data-pjax-container="">
                     <div class="panel panel-default data-grid">
