--- a/Admin/templates/userlist.html
+++ b/Admin/templates/userlist.html
@@ -21,7 +21,7 @@
                                     {% csrf_token %}
                                     <div class="col col-md-6">
                                         <div class="form-group field-post-search">
-                                            <input type="text" id="post-search" class="form-control" name="query" placeholder="Search by Title / Category">
+                                            <input type="text" id="post-search" class="form-control" name="query" placeholder="Search by name or email">
                                             <div class="help-block"></div>
                                         </div>
                                     </div>
