--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/perfect-scollbar.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/urban.css' %}">
     <link rel="stylesheet" href="{% static 'css/urban.skins.css' %}">
+    {{ form.media }}
     <style>
         .scroll{
             overflow: auto;
