--- a/templates/include/sidebar.html
+++ b/templates/include/sidebar.html
@@ -105,12 +105,12 @@
                 </a>
                 <ul class="sub-menu">
                     <li class="">
-                        <a href="#">
+                        <a href="{% url 'user_list' %}">
                             <span>Users</span>
                         </a>
                     </li>
                     <li class="">
-                        <a href="/blogger/index">
+                        <a href="{% url 'user_list' %}">
                             <span>Authors</span>
                         </a>
                     </li>
