--- a/Admin/templates/createpost.html
+++ b/Admin/templates/createpost.html
@@ -5,4 +5,33 @@
 
 {% block content %}
 
+<div class="main-panel">
+    {% include 'inc/header.html' %}
+    <div class="main-content">
+        <ul class="breadcrumb ">
+            <li><a href="{% url 'home' %}">Bosh sahifa</a></li>
+            <li class="active">Post</li>
+        </ul>
+        <div class="button-panel">
+            <a class="btn btn-fab btn-raised btn-primary" href="#" title="Create news Post"><i class="fa fa-plus"></i></a>
+        </div>
+
+        <div class="row">
+            <form action="" method="post" enctype="multipart/form-data" autocomplete="off">
+                {% csrf_token %}
+                {{form.as_p}}
+                <button type="">submit</button>
+            </form>
+        </div>
+                 
+    </div>
+</div>
+<script>
+function changeAttribute(id, att) {
+    var data = {};
+    data.id = id;
+    data.attribute = att;
+    $.get('/post/change', data)
+}
+</script>
 {% endblock content %}
