--- a/Admin/templates/inc/createcategory.html
+++ b/Admin/templates/inc/createcategory.html
@@ -17,6 +17,9 @@
               <div class="form-group">
                 {% render_field form.description type="text" id="disabledTextInput" class="form-control" placeholder="Description" %}
               </div>
+              <div class="form-group">
+                {% render_field form.parent id="disabledTextInput" class="form-control" %}
+              </div>
               <div class="form-check">
                 {% render_field form.is_home class="form-check-input" type="checkbox" %}
                 <label class="form-check-label">
