Yana men o'zgartirdim

--- a/Admin/templates/inc/header.html
+++ b/Admin/templates/inc/header.html
@@ -27,7 +27,7 @@
             <a href="/ru/post/index">Ruscha</a>
         </li>
         <li>
-            <a href="/system/cache">
+            <a href="">
                 <i class="fa fa-refresh"></i>
             </a>
         </li>
