--- a/Admin/templates/index.html
+++ b/Admin/templates/index.html
@@ -9,7 +9,7 @@
                     <li class="active">Post</li>
                 </ul>
                 <div class="button-panel">
-                    <a class="btn btn-fab btn-raised btn-primary" href="{% url 'createpost' %}" title="Create news Post"><i class="fa fa-plus"></i></a>
+                    <a class="btn btn-fab btn-raised btn-primary" href="{% url 'createpost' %}" title="Yangi post qo'shish"><i class="fa-solid fa-square-plus"></i></a>
                 </div>
                 <div id="post-grid" data-pjax-container="">
                     <div class="panel panel-default data-grid">
@@ -40,21 +40,21 @@
                             <table class="table table-striped table-hover">
                                 <thead>
                                     <tr>
-                                        <th><a href="/post/index?sort=type" data-sort="type">Type</a></th>
-                                        <th><a href="/post/index?sort=title" data-sort="title">Title</a></th>
-                                        <th><a href="/post/index?sort=views" data-sort="views">Views</a></th>
+                                        <th><a href="" data-sort="type">Type</a></th>
+                                        <th><a href="" data-sort="title">Title</a></th>
+                                        <th><a href="" data-sort="views">Views</a></th>
                                         <th><a href="/post/index?sort=views" data-sort="views">Category</a></th>
                                         <th><a href="/post/index?sort=status" data-sort="status">Status</a></th>
                                         <th><a class="desc" href="/post/index?sort=published_on" data-sort="published_on">Published On</a></th>
                                         <th><a href="/post/index?sort=is_main" data-sort="is_main">Is Main</a></th>
-                                        <th>Id</th>
+                                        <th>delete</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     {% for i in news %}
                                     <tr class="  " data-key="620ddae1f2750876ef694475">
                                         <td><a href="#" data-pjax="0" target="_blank"><i class="fa fa-external-link"></i></a></td>
-                                        <td><a href="#" data-pjax="0">{{i.name|truncatechars:100}}</a></td>
+                                        <td><a href="{% url 'updatepost' i.slug %}" data-pjax="0">{{i.name|truncatechars:100}}</a></td>
                                         <td>{{i.views}}</td>
                                         <th><a href="" data-sort="views">{{i.category}}</a></th>
                                         <td>{{i.status}}</td>
@@ -64,7 +64,7 @@
                                                 <input type="checkbox" name="is_main" {% if i.is_main %}checked{% endif %} ><span><i class='handle'></i></span>
                                             </label>
                                         </td>
-                                        <td><a href="/post/schedule?p=620ddae1f2750876ef694475" data-pjax="0">{{i.id}}</a></td>
+                                        <td><a href="{% url 'deletepost' i.slug %}" data-pjax="0"><i class="fa-solid fa-trash-can"></i></a></td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
