Ommabop qo'shildi

--- a/ZarNews/templates/home.html
+++ b/ZarNews/templates/home.html
@@ -481,117 +481,8 @@
                             </aside>
 
             <aside class="widget widget-popular-posts">
-                <h4 class="widget-title">Оммабоп</h4>
-                <ul class="post-list-small">
-                                                                    <li class="post-list-small__item">
-                            <article class="post-list-small__entry clearfix">
-
-                                <div class="post-list-small__body">
-                                    <h3 class="post-list-small__entry-title">
-                                        <a href="https://zarnews.uz/post/pedagoglar-attestaciyasida-inson-omili-aralashmaydi">
-                                            Таълим сифатини назорат қилиш давлат инспекцияси вилоят бўлими: Аттестацияда пул, таниш-билиш аралашмайди                                        </a>
-                                    </h3>
-                                    <ul class="entry__meta">
-
-                                        <li class="entry__meta-date">
-                                            23/03, 18:35                                        </li>
-                                        <li class="entry__meta-author">
-                                            <span class="ui-eye"></span> 1864                                        </li>
-                                    </ul>
-                                </div>
-                            </article>
-                        </li>
-                                                                    <li class="post-list-small__item">
-                            <article class="post-list-small__entry clearfix">
-
-                                <div class="post-list-small__body">
-                                    <h3 class="post-list-small__entry-title">
-                                        <a href="https://zarnews.uz/post/jinoyat-ishlari-boyicha-viloyat-sudiga-sudya-tayinlandi">
-                                            Жиноят ишлари бўйича вилоят судига судья тайинланди                                        </a>
-                                    </h3>
-                                    <ul class="entry__meta">
-
-                                        <li class="entry__meta-date">
-                                            24/03, 17:16                                        </li>
-                                        <li class="entry__meta-author">
-                                            <span class="ui-eye"></span> 1189                                        </li>
-                                    </ul>
-                                </div>
-                            </article>
-                        </li>
-                                                                    <li class="post-list-small__item">
-                            <article class="post-list-small__entry clearfix">
-
-                                <div class="post-list-small__body">
-                                    <h3 class="post-list-small__entry-title">
-                                        <a href="https://zarnews.uz/post/tadbirkorning-12-000-aqsh-dollarini-qolga-kiritmoqchi-bolgan-dxa-xodimi-ushlandi">
-                                            Тадбиркорнинг 12 000 АҚШ долларини қўлга киритмоқчи бўлган ДХА ходими ушланди                                        </a>
-                                    </h3>
-                                    <ul class="entry__meta">
-
-                                        <li class="entry__meta-date">
-                                            24/03, 11:34                                        </li>
-                                        <li class="entry__meta-author">
-                                            <span class="ui-eye"></span> 711                                        </li>
-                                    </ul>
-                                </div>
-                            </article>
-                        </li>
-                                                                    <li class="post-list-small__item">
-                            <article class="post-list-small__entry clearfix">
-
-                                <div class="post-list-small__body">
-                                    <h3 class="post-list-small__entry-title">
-                                        <a href="https://zarnews.uz/post/viloyat-iqtisodiy-taraqqiyot-va-kambagallikni-qisqartirish-bosh-boshqarmasi-kattaqorgon-shahar-bolimi-bosh-mutaxassisi-pora-bilan-qolga-olindi">
-                                            Вилоят иқтисодий тараққиёт ва камбағалликни қисқартириш бош бошқармаси Каттақўрғон шаҳар бўлими бош мутахассиси пора билан қўлга олинди                                        </a>
-                                    </h3>
-                                    <ul class="entry__meta">
-
-                                        <li class="entry__meta-date">
-                                            28/03, 10:13                                        </li>
-                                        <li class="entry__meta-author">
-                                            <span class="ui-eye"></span> 663                                        </li>
-                                    </ul>
-                                </div>
-                            </article>
-                        </li>
-                                                                    <li class="post-list-small__item">
-                            <article class="post-list-small__entry clearfix">
-
-                                <div class="post-list-small__body">
-                                    <h3 class="post-list-small__entry-title">
-                                        <a href="https://zarnews.uz/post/dxx-samarqandda-bir-qator-noqonuniy-er-sotish-holatlarini-fosh-qildi">
-                                            ДХХ Самарқандда бир қатор ноқонуний ер сотиш ҳолатларини фош қилди                                        </a>
-                                    </h3>
-                                    <ul class="entry__meta">
-
-                                        <li class="entry__meta-date">
-                                            27/03, 14:13                                        </li>
-                                        <li class="entry__meta-author">
-                                            <span class="ui-eye"></span> 573                                        </li>
-                                    </ul>
-                                </div>
-                            </article>
-                        </li>
-                                                                    <li class="post-list-small__item">
-                            <article class="post-list-small__entry clearfix">
-
-                                <div class="post-list-small__body">
-                                    <h3 class="post-list-small__entry-title">
-                                        <a href="https://zarnews.uz/post/ertaga-havo-sovishi-kutilmoqda-mart-oyining-songgi-kunlarida-ob-havo-malumoti">
-                                            Эртага ҳаво совиши кутилмоқда: Март ойининг сўнгги кунларида об-ҳаво маълумоти                                        </a>
-                                    </h3>
-                                    <ul class="entry__meta">
-
-                                        <li class="entry__meta-date">
-                                            Кеча, 11:47                                        </li>
-                                        <li class="entry__meta-author">
-                                            <span class="ui-eye"></span> 551                                        </li>
-                                    </ul>
-                                </div>
-                            </article>
-                        </li>
-                                    </ul>
+                <h4 class="widget-title">Ommabop</h4>
+                {% show_ommabop %}
                 <hr>
                 <div class="widget-socials">
                     <div class="row row-16">
